@@ -1,6 +1,7 @@
 v4.2.5 (2017-xx-xx)
 ---------------------------
 * added ArangoCollectionAsync.exists()
+* added ArangoDatabaseAsync.exists()
 
 v4.2.4 (2017-09-04)
 ---------------------------
